--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_seo.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_seo.yml
@@ -5,6 +5,6 @@ services:
   prestashop.adapter.product.options.redirect_target_provider:
     class: PrestaShop\PrestaShop\Adapter\Product\Options\RedirectTargetProvider
     arguments:
-      - '@prestashop.adapter.product.repository.product_preview_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductPreviewRepository'
       - '@prestashop.adapter.category.repository.category_preview_repository'
       - '@prestashop.adapter.legacy.context'
