--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_virtual_product.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_virtual_product.yml
@@ -22,7 +22,7 @@ services:
   prestashop.adapter.product.virtual_product.update.virtual_product_updater:
     class: PrestaShop\PrestaShop\Adapter\Product\VirtualProduct\Update\VirtualProductUpdater
     arguments:
-      - '@prestashop.adapter.product.repository.product_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductRepository'
       - '@prestashop.adapter.file.uploader.virtual_product_file_uploader'
       - '@prestashop.adapter.product.virtual_product.repository.virtual_product_file_repository'
 
