--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_feature_value.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_feature_value.yml
@@ -2,32 +2,28 @@ services:
   _defaults:
     public: true
 
-  prestashop.adapter.product.feature_value.command_handler.set_product_feature_values_handler:
-    class: PrestaShop\PrestaShop\Adapter\Product\FeatureValue\CommandHandler\SetProductFeatureValuesHandler
+  PrestaShop\PrestaShop\Adapter\Product\FeatureValue\CommandHandler\SetProductFeatureValuesHandler:
     arguments:
-      - '@prestashop.adapter.product.feature_value.update.product_feature_value_updater'
+      - '@PrestaShop\PrestaShop\Adapter\Product\FeatureValue\Update\ProductFeatureValueUpdater'
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Product\FeatureValue\Command\SetProductFeatureValuesCommand
 
-  prestashop.adapter.product.feature_value.command_handler.remove_all_feature_values_from_product_handler:
-    class: PrestaShop\PrestaShop\Adapter\Product\FeatureValue\CommandHandler\RemoveAllFeatureValuesFromProductHandler
+  PrestaShop\PrestaShop\Adapter\Product\FeatureValue\CommandHandler\RemoveAllFeatureValuesFromProductHandler:
     arguments:
-      - '@prestashop.adapter.product.feature_value.update.product_feature_value_updater'
+      - '@PrestaShop\PrestaShop\Adapter\Product\FeatureValue\Update\ProductFeatureValueUpdater'
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Product\FeatureValue\Command\RemoveAllFeatureValuesFromProductCommand
 
-  prestashop.adapter.product.feature_value.query_handler.get_product_feature_values_handler:
-    class: PrestaShop\PrestaShop\Adapter\Product\FeatureValue\QueryHandler\GetProductFeatureValuesHandler
+  PrestaShop\PrestaShop\Adapter\Product\FeatureValue\QueryHandler\GetProductFeatureValuesHandler:
     arguments:
       - '@prestashop.adapter.feature.repository.feature_value_repository'
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Product\FeatureValue\Query\GetProductFeatureValues
 
-  prestashop.adapter.product.feature_value.update.product_feature_value_updater:
-    class: PrestaShop\PrestaShop\Adapter\Product\FeatureValue\Update\ProductFeatureValueUpdater
+  PrestaShop\PrestaShop\Adapter\Product\FeatureValue\Update\ProductFeatureValueUpdater:
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
