--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_combination.yml
@@ -29,7 +29,7 @@ services:
       - '@PrestaShop\PrestaShop\Adapter\Product\Stock\Repository\StockAvailableMultiShopRepository'
       - '@prestashop.adapter.attribute.repository.attribute_repository'
       - '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductMultiShopRepository'
-      - '@prestashop.adapter.product.image.repository.product_image_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Image\Repository\ProductImageRepository'
       - '@prestashop.core.util.number.number_extractor'
       - '@prestashop.adapter.tax.tax_computer'
       - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
@@ -43,7 +43,7 @@ services:
     arguments:
       - '@PrestaShop\PrestaShop\Core\Grid\Query\ProductCombinationQueryBuilder'
       - '@prestashop.adapter.attribute.repository.attribute_repository'
-      - '@prestashop.adapter.product.image.repository.product_image_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Image\Repository\ProductImageRepository'
       - '@prestashop.adapter.product.image.product_image_url_factory'
       - '@prestashop.core.product.combination.name_builder.combination_name_builder'
     tags:
