--- a/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
@@ -126,7 +126,7 @@ services:
       - '@prestashop.adapter.attachment.attachment_repository'
       - '@prestashop.adapter.tax.tax_computer'
       - "@=service('prestashop.adapter.legacy.configuration').getInt('PS_COUNTRY_DEFAULT')"
-      - '@prestashop.adapter.product.options.redirect_target_provider'
+      - '@PrestaShop\PrestaShop\Adapter\Product\Options\RedirectTargetProvider'
       - '@prestashop.adapter.product.image.product_image_url_factory'
       - '@prestashop.adapter.product.specific_price.repository.specific_price_repository'
       - '@prestashop.adapter.legacy.configuration'
