--- a/src/PrestaShopBundle/Resources/config/services/adapter/product/_seo.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product/_seo.yml
@@ -1,9 +1,8 @@
 services:
   _defaults:
-    public: true
+    public: false
 
-  prestashop.adapter.product.options.redirect_target_provider:
-    class: PrestaShop\PrestaShop\Adapter\Product\Options\RedirectTargetProvider
+  PrestaShop\PrestaShop\Adapter\Product\Options\RedirectTargetProvider:
     arguments:
       - '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductPreviewRepository'
       - '@prestashop.adapter.category.repository.category_preview_repository'
