--- a/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/product.yml
@@ -128,7 +128,7 @@ services:
       - "@=service('prestashop.adapter.legacy.configuration').getInt('PS_COUNTRY_DEFAULT')"
       - '@PrestaShop\PrestaShop\Adapter\Product\Options\RedirectTargetProvider'
       - '@prestashop.adapter.product.image.product_image_url_factory'
-      - '@prestashop.adapter.product.specific_price.repository.specific_price_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Product\SpecificPrice\Repository\SpecificPriceRepository'
       - '@prestashop.adapter.legacy.configuration'
       - '@prestashop.core.category.name_builder.category_display_name_builder'
     tags:
